--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='-r @newrelic/next' next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_OPTIONS='-r @newrelic/next' next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@newrelic/next": "^0.9.0",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "framer-motion": "^10.12.9",
+    "newrelic": "^11.18.0",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
